# aget

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  aget.toml.example
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/tests/: integration.rs
docs/superpowers/plans/: 2026-04-17-aget-implementation.md  2026-04-18-head-mode.md  2026-04-18-http-caching.md  2026-05-06-builtin-url-rules.md  2026-05-06-framework-profiles.md  2026-05-06-output-chunking.md  2026-05-06-purl-style-releases.md  2026-05-06-shell-completions.md
docs/superpowers/specs/: 2026-04-17-aget-design.md  2026-04-18-head-design.md  2026-04-18-http-caching-design.md  2026-05-06-purl-style-releases-design.md
lib/: Cargo.toml
lib/src/: builtin_rules.rs  cache.rs  caching_fetcher.rs  chunk.rs  config.rs  error.rs  fetch.rs  fetcher.rs  head.rs  lib.rs  pipeline.rs  profile.rs  quality.rs
lib/src/engine/: accept_md.rs  dot_md.rs  html_extract.rs  mod.rs  registry.rs
