[workspace]
members = ["lib", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/danhilltech/aget"
homepage = "https://github.com/danhilltech/aget"
authors = ["Dan Hill"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
url = "2"
dirs = "6"
clap = { version = "4", features = ["derive"] }
dom_smoothie = "0.17"
htmd = "0.5"
