[package]
name = "aget-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core library for aget"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
url.workspace = true
dirs.workspace = true
dom_smoothie.workspace = true
htmd.workspace = true

[dev-dependencies]
tokio.workspace = true
mockito = "1"
tempfile = "3"
